네이버 API (단축url) 연동 토이 프로젝트 - 처음 전체 커밋!

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,26 @@
 ## Tomcat server port
 server.port = 8080
 
-## Maria DB
+## Maria DB 데이터베이스 설정
 spring.datasource.driverClassName=org.mariadb.jdbc.Driver
 spring.datasource.url=jdbc:mariadb://localhost:3306/around_hub_shop
 spring.datasource.username=root
 spring.datasource.password=qlalf0925!@#
 
 ## JPA
+# create		: SessionFactory가 올라갈때 테이블을 지우고 새로 만듬. (sql문을 별도로 만들어서 데이터를 넣는 용도로도 사용 가능하다.)
+# create-drop	: create 와 동일 하지만, SessionFactory가 내려가면 해당 테이블을 drop 시킨다.
+# update		: SessionFactory 가  올라갈때 Object 를 검사하여 테이블을 alter 시킨다. 테이터는 유지됨.
+# validate		: update 처럼 Object를 검사하지만, 스키마는 아무것도 건드리지 않고, Object와 스키마의 정보가 다르다면 에러를 발생시킨다.
+# none			: 사용하지 않음
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+## Security 관련
+## aroundhub.jwt.secret=aroundHub!@#
+
+## Custom Property
+around.hub.short.url.id=7FR_CBceRqybzUPGXaUo
+around.hub.short.url.scret=WFElkBv8Ks
+
