around hub studio 전체 최종소스 반영! 교육 끝!

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,10 +1,9 @@
 ## Tomcat server port
 server.port = 8080
-spring.profiles.active=dev
 
 ## Maria DB 데이터베이스 설정
 spring.datasource.driverClassName=org.mariadb.jdbc.Driver
-spring.datasource.url=jdbc:mariadb://localhost:3306/around_hub_shop
+spring.datasource.url=jdbc:mariadb://localhost:3306/springboot
 spring.datasource.username=ENC(0Xgxjz6n/Zpi4P1RroxTuw==)
 spring.datasource.password=ENC(HHCxZ5FcYgXbxoqKYwtaCs1E6gtvbbNp)
 
@@ -24,7 +23,7 @@ spring.jpa.properties.hibernate.format_sql=true
 ## Custom Property
 around.hub.short.url.id=7FR_CBceRqybzUPGXaUo
 around.hub.short.url.scret=WFElkBv8Ks
-around.hub.loading.message="## local 환경으로 실행되었습니다 ##"
+around.hub.loading.message="dev env started!"
 
 ## 프로퍼티 암호화 설정
 jasypt.encryptor.bean=jasyptStringEncryptor
