--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,19 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
+		
+		<!-- Jasypt (암호화) -->
+		<dependency>
+			<groupId>com.github.ulisesbocchio</groupId>
+			<artifactId>jasypt-spring-boot-starter</artifactId>
+			<version>3.0.5</version><!-- 스프링 부트 3에서는 3.0.4를 사용하면 정상적으로 동작하지 않는다 (3.0.5 사용) -->
+		</dependency>
+		
+		<!-- Redis (cache) -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-redis</artifactId>
+		</dependency>
 	
 	</dependencies>
 
